syntax = "proto3";

package workflow;

import "common/details.proto";
import "common/entities.proto";
import "common/metadata.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/compozy/compozy/pkg/pb/workflow";

enum WorkflowStatus {
  WORKFLOW_STATUS_UNSPECIFIED = 0;
  WORKFLOW_STATUS_PENDING = 1;
  WORKFLOW_STATUS_RUNNING = 2;
  WORKFLOW_STATUS_PAUSED = 3;
  WORKFLOW_STATUS_SUCCESS = 4;
  WORKFLOW_STATUS_FAILED = 5;
  WORKFLOW_STATUS_TIMED_OUT = 6;
  WORKFLOW_STATUS_CANCELED = 7;
}

// -----------------------------------------------------------------------------
// Workflow Execution Started Event
// -----------------------------------------------------------------------------

message WorkflowExecutionStartedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
  }
  Details details = 3;
}

// -----------------------------------------------------------------------------
// Workflow Execution Paused Event
// -----------------------------------------------------------------------------

message WorkflowExecutionPausedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
  }
  Details details = 3;
}

// -----------------------------------------------------------------------------
// Workflow Execution Resumed Event
// -----------------------------------------------------------------------------

message WorkflowExecutionResumedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
  }
  Details details = 4;
}

// -----------------------------------------------------------------------------
// Workflow Execution Success Event
// -----------------------------------------------------------------------------

message WorkflowExecutionSuccessEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
    google.protobuf.Struct result = 2;
    int64 duration_ms = 3;
  }
  Details details = 4;
}

// -----------------------------------------------------------------------------
// Workflow Execution Failed Event
// -----------------------------------------------------------------------------

message WorkflowExecutionFailedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
    common.ErrorResult error = 2;
    int64 duration_ms = 3;
  }
  Details details = 4;
}

// -----------------------------------------------------------------------------
// Workflow Execution Canceled Event
// -----------------------------------------------------------------------------

message WorkflowExecutionCanceledEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
    int64 duration_ms = 3;
  }
  Details details = 3;
}

// -----------------------------------------------------------------------------
// Workflow Execution Timed Out Event
// -----------------------------------------------------------------------------

message WorkflowExecutionTimedOutEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;

  message Details {
    WorkflowStatus status = 1;
    common.ErrorResult error = 2;
    int64 duration_ms = 3;
  }
  Details details = 4;
}
